# ruuth

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: rust.yml
pkg/: ruuth.service  ruuth.toml
scripts/: postinst  preinst  prerm
src/: challenge_manager.rs  config.rs  db.rs  env_parser.rs  main.rs  session.rs  settings.rs  tui.rs  user_manager.rs  web.rs
src/entities/: ban_tracker.rs  mod.rs  prelude.rs  user.rs
templates/src/: login.html
