[package]
name = "ruuth"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Lightweight NGINX auth_request backend"

[dependencies]

# tracing/error handling
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-error = "0.2.0"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
color-eyre = { version = "0.6.2", features = ["tracing-error"] }

# askama/axum
axum = { version = "0.5.16", features = ["headers"] }
axum-sessions = "0.3.1"
async-redis-session = "0.2.2"
async-sqlx-session = { git = "https://github.com/Outurnate/async-sqlx-session", branch = "Outurnate-version-bump", default-features = false, features = ["mysql", "pg", "sqlite", "tokio_rustls"] }
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
askama = { git = "https://github.com/djc/askama.git", default-features = false, features = ["with-axum"] }
askama_derive = { git = "https://github.com/djc/askama.git" }
askama_axum = { git = "https://github.com/djc/askama.git" }

# sea orm
sea-orm = { version = "0.9.2", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"] }
sea-orm-migration = { version = "0.9.2", default-features = false, features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"] }
sqlx = { version = "0.6.2", default-features = false, features = ["sqlite", "postgres", "mysql"] }

# config/cli
clap = { version = "4.0.4", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
zxcvbn = "2.2.1"
config = { version = "0.13.2", default-features = false, features = ["toml"] }
rpassword = "7.0.0"

# crypto primitives
argon2 = { version = "0.4.1", features = ["std"] }
totp-lite = "2.0.0"
sha2 = "0.10.6"

# core lib type stuff
tokio = { version = "1.21.0", default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.13.0"
qrcode = { version = "0.12.0", default-features = false }
captcha = { version = "0.0.9", default-features = false }
rand = "0.8.5"
base32 = "0.4.0"

[build-dependencies]
minify-html = "0.10.0"

[profile.release]
strip = true
lto = true
codegen-units = 1

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/ruuth", dest = "/usr/bin/ruuth", mode = "755", config = false, doc = false },
  { source = "pkg/ruuth.toml", dest = "/etc/ruuth.toml", mode = "644", config = true, doc = false },
  { source = "pkg/ruuth.service", dest = "/usr/lib/systemd/system/ruuth.service", mode = "644", config = true, doc = false }
]
pre_install_script = "getent group ruuth >/dev/null 2>&1 || groupapp -r -c \"ruuth authentication daemon group\" ruuth; getent passwd ruuth >/dev/null 2>&1 || useradd -g ruuth -r --no-create-home -s /sbin/nologin -c \"ruuth authentication daemon account\" ruuth"
post_install_script = "systemctl daemon-reload"
pre_uninstall_script = "systemctl disable --now ruuth"

[package.metadata.generate-rpm.requires]
shadow-utils = "*"