[package]
name = "ruuth"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Lightweight NGINX auth_request backend"

[dependencies]

# tracing/error handling
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"
tracing-appender = "0.2"
tracing-log = "0.1"
color-eyre = { version = "0.6", features = ["tracing-error"] }

# askama/axum
axum = { version = "0.5", features = ["headers"] }
axum-sessions = "0.3"
async-redis-session = "0.2"
async-sqlx-session = { git = "https://github.com/Outurnate/async-sqlx-session", branch = "Outurnate-version-bump", default-features = false, features = ["mysql", "pg", "sqlite", "tokio_rustls"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
askama = { git = "https://github.com/djc/askama.git", default-features = false, features = ["with-axum"] }
askama_derive = { git = "https://github.com/djc/askama.git" }
askama_axum = { git = "https://github.com/djc/askama.git" }
hyperlocal = "0.8"
hyper = "0.14"

# sea orm
sea-orm = { version = "0.10", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"] }
sea-orm-migration = { version = "0.11", default-features = false, features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"] }
sqlx = { version = "0.6", default-features = false, features = ["sqlite", "postgres", "mysql"] }

# config/cli
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.0"
zxcvbn = "2.2"
config = { version = "0.13", default-features = false, features = ["toml"] }
rpassword = "7.0"

# crypto primitives
argon2 = { version = "0.4", features = ["std"] }
totp-lite = "2.0"
sha2 = "0.10"

# core lib type stuff
tokio = { version = "1.21", default-features = false }
serde = { version = "1.0", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.13"
qrcode = { version = "0.12", default-features = false }
captcha = { version = "0.0", default-features = false }
rand = "0.8"
base32 = "0.4"

[build-dependencies]
minify-html = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/ruuth", dest = "/usr/bin/ruuth", mode = "755", config = false, doc = false },
  { source = "pkg/ruuth.toml", dest = "/etc/ruuth.toml", mode = "644", config = true, doc = false },
  { source = "pkg/ruuth.service", dest = "/usr/lib/systemd/system/ruuth.service", mode = "644", config = true, doc = false }
]
pre_install_script = "getent group ruuth >/dev/null 2>&1 || groupadd -r ruuth; getent passwd ruuth >/dev/null 2>&1 || useradd -g ruuth -r --no-create-home -s /sbin/nologin -c \"ruuth authentication daemon account\" ruuth"
post_install_script = "systemctl daemon-reload"
pre_uninstall_script = "systemctl disable --now ruuth"

[package.metadata.generate-rpm.requires]
shadow-utils = "*"